--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   flame: ^1.18.0
+  flame_audio: ^2.10.2
 
 dev_dependencies:
   flutter_test:
@@ -19,9 +20,16 @@ dev_dependencies:
   flutter_lints: ^3.0.0
 
 flutter:
+
   uses-material-design: true
+
+
   assets:
     - assets/images/
     - assets/audio/
 
+  fonts:
+    - family: Game     
+      fonts:
+        - asset: assets/fonts/Game.ttf
   
